--- a/React Website/package.json
+++ b/React Website/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.76.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +44,9 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.8.2"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
