--- a/React Website/package.json
+++ b/React Website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-stuff",
-  "homepage": "https://localhost:80/build",
+  "homepage": "https://www-student.cse.buffalo.edu/CSE442-542/2023-Spring/cse-442h",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
